Исправления согласно замечаниям IDE. Косметические изменения.